# spacefactory

./: .gitignore  README.md  pyproject.toml
factory-space/: .gitignore  dev.ipynb  factory-space.nt  merged_tables.xlsx  model-version-2_2.xlsx
factory-space/company/: dag.py
factory-space/extracted-pages/: dag.py
factory-space/extracted-pages/output/: description.yml
factory-space/inspace-economy/: dag.py
factory-space/inspace-economy/output/: description.yml  main.py
factory-space/inspace-manufacturing/: dag.py
factory-space/inspace-manufacturing/output/: description.yml
factory-space/taxonomy/: dag.py
factory-space/taxonomy/output/: taxonomy_0.yml  taxonomy_2.yml
fins/: dag.py
ontology/: classes.csv
